[package]
name = "waitgroup"
version = "0.1.0"
authors = ["laizy <aochyi@126.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-core = "0.3.4"

[dev-dependencies]
async-std = {version = "1.5.0", features = ["attributes"]}

