[package]
name = "waitgroup"
version = "0.1.2"
authors = ["laizy <aochyi@126.com>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://github.com/laizy/waitgroup-rs"
repository = "https://github.com/laizy/waitgroup-rs"
description = "Async waitgroup for a collection of task to finish"
documentation = "https://docs.rs/waitgroup"
keywords = ["waitgroup", "notify", "wake", "futures", "async"]
categories = ["asynchronous", "concurrency"]
readme = "README.md"

[dependencies]
atomic-waker = "1.0"

[dev-dependencies]
async-std = {version = "1.5.0", features = ["attributes"]}

